Add initial navbar to index.html

--- a/contact.html
+++ b/contact.html
@@ -30,9 +30,8 @@
             <!-- //TODO Add card/jumbotron with contact form -->
         </main>
         <footer>
-            <!-- //TODO Add social and make sticky-->>
+            <!-- //TODO Add social and make sticky-->
         </footer>
-
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
