--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
             <!-- //TODO Add card with card decks? -->
         </main>
         <footer>
-            <!-- //TODO Add social and make sticky-->>
+            <!-- //TODO Add social and make sticky-->
         </footer>
 
 
