--- a/index.html
+++ b/index.html
@@ -23,39 +23,76 @@
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">Navbar</a>
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <a
+                    class="navbar-brand"
+                    href="https://github.com/markdcross"
+                    target="_blank"
+                    >Mark Cross</a
+                >
                 <button
                     class="navbar-toggler"
                     type="button"
                     data-toggle="collapse"
-                    data-target="#navbarNav"
-                    aria-controls="navbarNav"
+                    data-target="#navbarNavDropdown"
+                    aria-controls="navbarNavDropdown"
                     aria-expanded="false"
                     aria-label="Toggle navigation"
                 >
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#"
+                            <a class="nav-link" href="index.html"
                                 >Home <span class="sr-only">(current)</span></a
                             >
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
-                        </li>
-                        <li class="nav-item">
+                        <li class="nav-item dropdown">
                             <a
-                                class="nav-link disabled"
-                                href="#"
-                                tabindex="-1"
-                                aria-disabled="true"
-                                >Disabled</a
+                                class="nav-link dropdown-toggle"
+                                href="portfolio.html"
+                                id="navbarDropdownMenuLink"
+                                data-toggle="dropdown"
+                                aria-haspopup="true"
+                                aria-expanded="false"
+                            >
+                                Portfolio
+                            </a>
+                            <div
+                                class="dropdown-menu"
+                                aria-labelledby="navbarDropdownMenuLink"
+                            >
+                                <a class="dropdown-item" href="portfolio.html"
+                                    >Main page</a
+                                >
+                                <hr />
+                                <a class="dropdown-item" href="portfolio.html"
+                                    >An Hour Out Placeholder</a
+                                >
+                                <a class="dropdown-item" href="#"
+                                    >Project Placeholder</a
+                                >
+                                <a class="dropdown-item" href="#"
+                                    >Project Placeholder</a
+                                >
+                                <a class="dropdown-item" href="#"
+                                    >Project Placeholder</a
+                                >
+                                <a class="dropdown-item" href="#"
+                                    >Project Placeholder</a
+                                >
+                                <a class="dropdown-item" href="#"
+                                    >Project Placeholder</a
+                                >
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="brewing.html">Brewing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html"
+                                >Contact me</a
                             >
                         </li>
                     </ul>
@@ -63,11 +100,8 @@
             </nav>
         </header>
         <main>
-<h1>Hello, world!</h1>
+            <h1>Hello, world!</h1>
         </main>
-        <footer>
-            <!-- //TODO Add social and make sticky-->>
-        </footer>
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
