--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                                 href="https://www.facebook.com/mark.cross.129"
                                 target="_blank"
                             >
-                                <img src=Assets/facebook.png></a
+                                <img src=assets/facebook.png></a
                             >
                         </li>
                         <li>
@@ -174,7 +174,7 @@
                                 href="https://twitter.com/Crossbacca"
                                 target="_blank"
                             >
-                                <img src=Assets/twitter.png /></a
+                                <img src=assets/twitter.png /></a
                             >
                         </li>
                         <li>
@@ -182,7 +182,7 @@
                                 href="https://www.instagram.com/crossbacca/"
                                 target="_blank"
                             >
-                                <img src="Assets/instagram.png"
+                                <img src="assets/instagram.png"
                             /></a>
                         </li>
                         <li>
@@ -190,7 +190,7 @@
                                 href="https://github.com/markdcross"
                                 target="_blank"
                             >
-                                <img src="Assets/github.png"
+                                <img src="assets/github.png"
                             /></a>
                         </li>
                         <li>
@@ -198,7 +198,7 @@
                                 href="https://www.linkedin.com/in/markdcross/"
                                 target="_blank"
                             >
-                                <img src="Assets/linkedin.png"
+                                <img src="assets/linkedin.png"
                             /></a>
                         </li>
                     </ul>
