Add sticky footer, corrected background image size, add media queries for background

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         <main class="container-fluid wrapper">
             <div class="row">
-                <div class="col-md-8 col-xs-12 offset-1">
+                <div class="col-md-8 col-xs-12">
                     <section class="card">
                         <h3 class="card-header">
                             Full-stack developer. Brewer. Killer haircut.
@@ -166,23 +166,23 @@
                                 href="https://www.facebook.com/mark.cross.129"
                                 target="_blank"
                             >
-                                <img src=assets/facebook.png></a
-                            >
+                                <img src="assets/facebook.png" alt="Facebook"
+                            /></a>
                         </li>
                         <li>
                             <a
                                 href="https://twitter.com/Crossbacca"
                                 target="_blank"
                             >
-                                <img src=assets/twitter.png /></a
-                            >
+                                <img src="assets/twitter.png" alt="Twitter"
+                            /></a>
                         </li>
                         <li>
                             <a
                                 href="https://www.instagram.com/crossbacca/"
                                 target="_blank"
                             >
-                                <img src="assets/instagram.png"
+                                <img src="assets/instagram.png" alt="Instagram"
                             /></a>
                         </li>
                         <li>
@@ -190,7 +190,7 @@
                                 href="https://github.com/markdcross"
                                 target="_blank"
                             >
-                                <img src="assets/github.png"
+                                <img src="assets/github.png" alt="GitHub"
                             /></a>
                         </li>
                         <li>
@@ -198,7 +198,7 @@
                                 href="https://www.linkedin.com/in/markdcross/"
                                 target="_blank"
                             >
-                                <img src="assets/linkedin.png"
+                                <img src="assets/linkedin.png" alt="LinkedIn"
                             /></a>
                         </li>
                     </ul>
@@ -208,12 +208,13 @@
 
         <!-- Beginning of Footer -->
         <!-- //TODO Make it sticky-->
-        <footer>
+        <footer class="footer mt-auto fixed-bottom">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-12">
-                        <p>Created by Mark Cross | &copy; 2020</p>
                         <p>
+                            Created by Mark Cross | &copy; 2020 |
+
                             <span
                                 >Background by
                                 <a
