Commit for HTML validation

--- a/contact.html
+++ b/contact.html
@@ -110,6 +110,52 @@
         <!-- Main section -->
 
         <main class="container-fluid wrapper">
+            <div class="row">
+                <div class="col-md-8 col-xs-12">
+                    <section class="card">
+                        <h3 class="card-header">
+                            Full-stack developer. Brewer. Killer haircut.
+                        </h3>
+                        <div class="card-body">
+                            <img
+                                class="img-thumbnail float-left"
+                                src="assets/headshot.png"
+                                alt="Mark's headshot"
+                            />
+                            <h5 class="card-title">
+                                Who is this handsome devil?
+                            </h5>
+                            <p class="card-text">
+                                I'm Mark Cross and I'm enrolled in the
+                                University of Richmond Coding Bootcamp. Born and
+                                raised in Annapolis, MD, graduate of the
+                                Univertsity of Delaware (go Blue Hens 🐓), and
+                                now Richmond local. I've spent my career in
+                                sales and sales leadership, having recently
+                                served as the head of sales for Richmond-based
+                                startup,
+                                <a href="https://www.edconnective.com/"
+                                    >EdConenctive</a
+                                >.
+                            </p>
+                            <p class="card-text">
+                                I'm not going anywhere. They're going to execute
+                                her. Look, a few minutes ago you said you didn't
+                                want to just wait here to be captured. Now all
+                                you want to do is stay. Marching into the
+                                detention area is not what I had in mind. But
+                                they're going to kill her! Better her than me...
+                                She's rich. Rich? Yes. Rich, powerful! Listen,
+                                if you were to rescue her, the reward would
+                                be... What? Well more wealth that you can
+                                imagine. I don't know, I can imagine quite a
+                                bit! You'll get it! I better! You will...
+                            </p>
+                        </div>
+                    </section>
+                </div>
+            </div>
+
             <!-- Social icons -->
 
             <div class="row social">
@@ -120,7 +166,7 @@
                                 href="https://www.facebook.com/mark.cross.129"
                                 target="_blank"
                             >
-                                <img src="assets/facebook.png"
+                                <img src="assets/facebook.png" alt="Facebook"
                             /></a>
                         </li>
                         <li>
@@ -128,7 +174,7 @@
                                 href="https://twitter.com/Crossbacca"
                                 target="_blank"
                             >
-                                <img src="assets/twitter.png"
+                                <img src="assets/twitter.png" alt="Twitter"
                             /></a>
                         </li>
                         <li>
@@ -136,7 +182,7 @@
                                 href="https://www.instagram.com/crossbacca/"
                                 target="_blank"
                             >
-                                <img src="assets/instagram.png"
+                                <img src="assets/instagram.png" alt="Instagram"
                             /></a>
                         </li>
                         <li>
@@ -144,7 +190,7 @@
                                 href="https://github.com/markdcross"
                                 target="_blank"
                             >
-                                <img src="assets/github.png"
+                                <img src="assets/github.png" alt="GitHub"
                             /></a>
                         </li>
                         <li>
@@ -152,7 +198,7 @@
                                 href="https://www.linkedin.com/in/markdcross/"
                                 target="_blank"
                             >
-                                <img src="assets/linkedin.png"
+                                <img src="assets/linkedin.png" alt="LinkedIn"
                             /></a>
                         </li>
                     </ul>
@@ -161,7 +207,7 @@
         </main>
 
         <!-- Beginning of Footer -->
-        <!-- //TODO Make it sticky-->
+ 
         <footer class="footer mt-auto fixed-bottom">
             <div class="container-fluid">
                 <div class="row">
