Fixed border on XS screen

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
                             >
                         </li>
 
-                         <!-- Projects Drop-down -->
+                        <!-- Projects Drop-down -->
                         <li class="nav-item dropdown">
                             <a
                                 class="nav-link dropdown-toggle"
@@ -110,66 +110,16 @@
             </nav>
         </header>
 
-        <!-- Main section -->
+        <!-- Portfolio -->
 
         <main class="container-fluid wrapper">
-
-            <!-- Portfolio -->
             <section class="row">
-                <div class=col-md-8>
-                    
+                <div class="container">
+                    <div class="col-md-8">
+                        <h1>My Portfolio</h1>
+                    </div>
                 </div>
-
             </section>
-            
-            <!-- Social icons -->
-
-            <div class="row social">
-                <div class="col-md-12">
-                    <ul class="social-icons">
-                        <li>
-                            <a
-                                href="https://www.facebook.com/mark.cross.129"
-                                target="_blank"
-                            >
-                                <img src="assets/facebook.png" alt="Facebook"
-                            /></a>
-                        </li>
-                        <li>
-                            <a
-                                href="https://twitter.com/Crossbacca"
-                                target="_blank"
-                            >
-                                <img src="assets/twitter.png" alt="Twitter"
-                            /></a>
-                        </li>
-                        <li>
-                            <a
-                                href="https://www.instagram.com/crossbacca/"
-                                target="_blank"
-                            >
-                                <img src="assets/instagram.png" alt="Instagram"
-                            /></a>
-                        </li>
-                        <li>
-                            <a
-                                href="https://github.com/markdcross"
-                                target="_blank"
-                            >
-                                <img src="assets/github.png" alt="GitHub"
-                            /></a>
-                        </li>
-                        <li>
-                            <a
-                                href="https://www.linkedin.com/in/markdcross/"
-                                target="_blank"
-                            >
-                                <img src="assets/linkedin.png" alt="LinkedIn"
-                            /></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
         </main>
 
         <!-- Beginning of Footer -->
