--- a/index.html
+++ b/index.html
@@ -115,98 +115,93 @@
 
         <!-- Main section -->
 
-        <main class="container-fluid wrapper">
+        <main class="container-fluid">
             <div class="row">
-                <div class="col-md-8">
-                    <article class="container">
-                        <header class="main-header">
-                            <h1>
-                                About me
-                            </h1>
-                        </header>
-                        <section class="main-body">
-                            <img
-                                class="img-thumbnail float-left"
-                                src="assets/headshot.png"
-                                alt="Mark's headshot"
-                            />
-                            <h3 class="main-title">
-                                Full-stack developer. Brewer. Killer haircut.
-                            </h3>
-                            <p class="main-text">
-                                I'm Mark Cross and I'm enrolled in the
-                                University of Richmond Coding Bootcamp. Born and
-                                raised in Annapolis, MD, graduate of the
-                                Univertsity of Delaware (go Blue Hens 🐓), and
-                                now Richmond local. I've spent my career in
-                                sales and sales leadership, having recently
-                                served as the head of sales for Richmond-based
-                                startup,
-                                <a href="https://www.edconnective.com/"
-                                    >EdConenctive</a
-                                >.
-                            </p>
-                            <div class="social">
-                                <div class="col-md-12">
-                                    <ul
-                                        class="social-links d-inline-block mb-3"
-                                    >
-                                        <li>
-                                            <a
-                                                href="https://www.facebook.com/mark.cross.129"
-                                                target="_blank"
-                                            >
-                                                <img
-                                                    src="assets/facebook.png"
-                                                    alt="Facebook"
-                                            /></a>
-                                        </li>
-                                        <li>
-                                            <a
-                                                href="https://twitter.com/Crossbacca"
-                                                target="_blank"
-                                            >
-                                                <img
-                                                    src="assets/twitter.png"
-                                                    alt="Twitter"
-                                            /></a>
-                                        </li>
-                                        <li>
-                                            <a
-                                                href="https://www.instagram.com/crossbacca/"
-                                                target="_blank"
-                                            >
-                                                <img
-                                                    src="assets/instagram.png"
-                                                    alt="Instagram"
-                                            /></a>
-                                        </li>
-                                        <li>
-                                            <a
-                                                href="https://github.com/markdcross"
-                                                target="_blank"
-                                            >
-                                                <img
-                                                    src="assets/github.png"
-                                                    alt="GitHub"
-                                            /></a>
-                                        </li>
-                                        <li>
-                                            <a
-                                                href="https://www.linkedin.com/in/markdcross/"
-                                                target="_blank"
-                                            >
-                                                <img
-                                                    src="assets/linkedin.png"
-                                                    alt="LinkedIn"
-                                            /></a>
-                                        </li>
-                                    </ul>
-                                </div>
+                <article class="main-container col-md-8 offset-1">
+                    <header class="main-header">
+                        <h1>
+                            About me
+                        </h1>
+                    </header>
+                    <section class="main-body">
+                        <img
+                            class="img-thumbnail float-left headshot"
+                            src="assets/headshot.png"
+                            alt="Mark's headshot"
+                        />
+                        <h3 class="main-title">
+                            Full-stack developer. Brewer. Killer haircut.
+                        </h3>
+                        <p class="main-text">
+                            I'm Mark Cross and I'm enrolled in the University of
+                            Richmond Coding Bootcamp. Born and raised in
+                            Annapolis, MD, graduate of the Univertsity of
+                            Delaware (go Blue Hens 🐓), and now Richmond local.
+                            I've spent my career in sales and sales leadership,
+                            having recently served as the head of sales for
+                            Richmond-based startup,
+                            <a href="https://www.edconnective.com/"
+                                >EdConenctive</a
+                            >.
+                        </p>
+                        <div class="social">
+                            <div class="col-md-12">
+                                <ul class="social-links d-inline-block mb-3">
+                                    <li>
+                                        <a
+                                            href="https://www.facebook.com/mark.cross.129"
+                                            target="_blank"
+                                        >
+                                            <img
+                                                src="assets/facebook.png"
+                                                alt="Facebook"
+                                        /></a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="https://twitter.com/Crossbacca"
+                                            target="_blank"
+                                        >
+                                            <img
+                                                src="assets/twitter.png"
+                                                alt="Twitter"
+                                        /></a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="https://www.instagram.com/crossbacca/"
+                                            target="_blank"
+                                        >
+                                            <img
+                                                src="assets/instagram.png"
+                                                alt="Instagram"
+                                        /></a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="https://github.com/markdcross"
+                                            target="_blank"
+                                        >
+                                            <img
+                                                src="assets/github.png"
+                                                alt="GitHub"
+                                        /></a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="https://www.linkedin.com/in/markdcross/"
+                                            target="_blank"
+                                        >
+                                            <img
+                                                src="assets/linkedin.png"
+                                                alt="LinkedIn"
+                                        /></a>
+                                    </li>
+                                </ul>
                             </div>
-                        </section>
-                    </article>
-                </div>
+                        </div>
+                    </section>
+                </article>
             </div>
         </main>
 
