completed portfolio page

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <main class="container-fluid">
             <div class="row">
-                <article class="main-container col-md-8 offset-1">
+                <article class="main-container col-md-7 offset-1">
                     <header class="main-header">
                         <h1>
                             About me
@@ -146,7 +146,7 @@
                         </p>
                         <div class="social">
                             <div class="col-md-12">
-                                <ul class="social-links d-inline-block mb-3">
+                                <ul class="social-links">
                                     <li>
                                         <a
                                             href="https://www.facebook.com/mark.cross.129"
@@ -155,6 +155,7 @@
                                             <img
                                                 src="assets/facebook.png"
                                                 alt="Facebook"
+                                                class="social-img"
                                         /></a>
                                     </li>
                                     <li>
@@ -165,6 +166,7 @@
                                             <img
                                                 src="assets/twitter.png"
                                                 alt="Twitter"
+                                                class="social-img"
                                         /></a>
                                     </li>
                                     <li>
@@ -175,6 +177,7 @@
                                             <img
                                                 src="assets/instagram.png"
                                                 alt="Instagram"
+                                                class="social-img"
                                         /></a>
                                     </li>
                                     <li>
@@ -185,6 +188,7 @@
                                             <img
                                                 src="assets/github.png"
                                                 alt="GitHub"
+                                                class="social-img"
                                         /></a>
                                     </li>
                                     <li>
@@ -195,6 +199,7 @@
                                             <img
                                                 src="assets/linkedin.png"
                                                 alt="LinkedIn"
+                                                class="social-img"
                                         /></a>
                                     </li>
                                 </ul>
