--- a/portfolio.html
+++ b/portfolio.html
@@ -112,13 +112,125 @@
 
         <!-- Portfolio -->
 
-        <main class="container-fluid wrapper">
+        <main class="container-fluid">
             <section class="row">
-                <div class="container">
-                    <div class="col-md-8">
-                        <h1>My Portfolio</h1>
+                <article
+                    class="main-container portfolio-container col-md-6 offset-1"
+                >
+                    <header class="main-header">
+                        <h1>
+                            My Portfolio
+                        </h1>
+                    </header>
+                    <div class="row">
+                        <section class="portfolio-body col-md-12">
+                            <div class="card-deck">
+                                <figure class="card">
+                                    <img
+                                        src="https://via.placeholder.com/300"
+                                        class="card-img-top"
+                                        alt="..."
+                                    />
+                                    <figcaption class="card-body">
+                                        <h4 class="card-title">An Hour Out</h4>
+                                        <p class="card-text">
+                                            Have you ever wondered about the
+                                            best day trips within an hour (or
+                                            two) of RVA? Consider your questions
+                                            answered.
+                                        </p>
+                                    </figcaption>
+                                </figure>
+                                <figure class="card">
+                                    <img
+                                        src="https://via.placeholder.com/300"
+                                        class="card-img-top"
+                                        alt="..."
+                                    />
+                                    <figcaption class="card-body">
+                                        <h4 class="card-title">Card title</h4>
+                                        <p class="card-text">
+                                            This card has supporting text below
+                                            as a natural lead-in to additional
+                                            content.
+                                        </p>
+                                    </figcaption>
+                                </figure>
+                                <figure class="card">
+                                    <img
+                                        src="https://via.placeholder.com/300"
+                                        class="card-img-top"
+                                        alt="..."
+                                    />
+                                    <figcaption class="card-body">
+                                        <h4 class="card-title">Card title</h4>
+                                        <p class="card-text">
+                                            This is a wider card with supporting
+                                            text below as a natural lead-in to
+                                            additional content. This card has
+                                            even longer content than the first
+                                            to show that equal height action.
+                                        </p>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                        </section>
                     </div>
-                </div>
+                    <div class="row">
+                        <section class="portfolio-body col-md-12">
+                            <div class="card-deck">
+                                <figure class="card">
+                                    <img
+                                        src="https://via.placeholder.com/300"
+                                        class="card-img-top"
+                                        alt="..."
+                                    />
+                                    <figcaption class="card-body">
+                                        <h4 class="card-title">Card title</h4>
+                                        <p class="card-text">
+                                            This is a longer card with
+                                            supporting text below as a natural
+                                            lead-in to additional content. This
+                                            content is a little bit longer.
+                                        </p>
+                                    </figcaption>
+                                </figure>
+                                <figure class="card">
+                                    <img
+                                        src="https://via.placeholder.com/300"
+                                        class="card-img-top"
+                                        alt="..."
+                                    />
+                                    <figcaption class="card-body">
+                                        <h4 class="card-title">Card title</h4>
+                                        <p class="card-text">
+                                            This card has supporting text below
+                                            as a natural lead-in to additional
+                                            content.
+                                        </p>
+                                    </figcaption>
+                                </figure>
+                                <figure class="card">
+                                    <img
+                                        src="https://via.placeholder.com/300"
+                                        class="card-img-top"
+                                        alt="..."
+                                    />
+                                    <figcaption class="card-body">
+                                        <h4 class="card-title">Card title</h4>
+                                        <p class="card-text">
+                                            This is a wider card with supporting
+                                            text below as a natural lead-in to
+                                            additional content. This card has
+                                            even longer content than the first
+                                            to show that equal height action.
+                                        </p>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                        </section>
+                    </div>
+                </article>
             </section>
         </main>
 
