Finished contact form and brewing page layout

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
         <!-- Main section -->
 
-        <main class="container-fluid">
+        <main class="index container-fluid">
             <div class="row">
                 <article class="main-container col-md-7 offset-1">
                     <header class="main-header">
