--- a/portfolio.html
+++ b/portfolio.html
@@ -112,10 +112,10 @@
 
         <!-- Portfolio -->
 
-        <main class="container-fluid">
+        <main class="portfolio container-fluid">
             <section class="row">
                 <article
-                    class="main-container portfolio-container col-md-6 offset-1"
+                    class="main-container portfolio-container col-md-7 offset-1"
                 >
                     <header class="main-header">
                         <h1>
