--- a/brewing.html
+++ b/brewing.html
@@ -109,8 +109,125 @@
 
         <!-- Main section -->
 
-        <main class="container-fluid wrapper">
-           
+        <main class="portfolio container-fluid">
+            <section class="row">
+                <article
+                    class="main-container portfolio-container col-md-7 offset-1"
+                >
+                    <header class="main-header">
+                        <h1>
+                            I Made Beer!
+                        </h1>
+                    </header>
+                    <div class="row">
+                        <section class="portfolio-body col-md-12">
+                            <div class="card-deck">
+                                <figure class="card">
+                                    <img
+                                        src="https://via.placeholder.com/300"
+                                        class="card-img-top"
+                                        alt="..."
+                                    />
+                                    <figcaption class="card-body">
+                                        <h4 class="card-title">
+                                            Beer I've Brewed
+                                        </h4>
+                                        <p class="card-text">
+                                            Description and recipe
+                                        </p>
+                                    </figcaption>
+                                </figure>
+                                <figure class="card">
+                                    <img
+                                        src="https://via.placeholder.com/300"
+                                        class="card-img-top"
+                                        alt="..."
+                                    />
+                                    <figcaption class="card-body">
+                                        <h4 class="card-title">Card title</h4>
+                                        <p class="card-text">
+                                            This card has supporting text below
+                                            as a natural lead-in to additional
+                                            content.
+                                        </p>
+                                    </figcaption>
+                                </figure>
+                                <figure class="card">
+                                    <img
+                                        src="https://via.placeholder.com/300"
+                                        class="card-img-top"
+                                        alt="..."
+                                    />
+                                    <figcaption class="card-body">
+                                        <h4 class="card-title">Card title</h4>
+                                        <p class="card-text">
+                                            This is a wider card with supporting
+                                            text below as a natural lead-in to
+                                            additional content. This card has
+                                            even longer content than the first
+                                            to show that equal height action.
+                                        </p>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                        </section>
+                    </div>
+                    <div class="row">
+                        <section class="portfolio-body col-md-12">
+                            <div class="card-deck">
+                                <figure class="card">
+                                    <img
+                                        src="https://via.placeholder.com/300"
+                                        class="card-img-top"
+                                        alt="..."
+                                    />
+                                    <figcaption class="card-body">
+                                        <h4 class="card-title">Card title</h4>
+                                        <p class="card-text">
+                                            This is a longer card with
+                                            supporting text below as a natural
+                                            lead-in to additional content. This
+                                            content is a little bit longer.
+                                        </p>
+                                    </figcaption>
+                                </figure>
+                                <figure class="card">
+                                    <img
+                                        src="https://via.placeholder.com/300"
+                                        class="card-img-top"
+                                        alt="..."
+                                    />
+                                    <figcaption class="card-body">
+                                        <h4 class="card-title">Card title</h4>
+                                        <p class="card-text">
+                                            This card has supporting text below
+                                            as a natural lead-in to additional
+                                            content.
+                                        </p>
+                                    </figcaption>
+                                </figure>
+                                <figure class="card">
+                                    <img
+                                        src="https://via.placeholder.com/300"
+                                        class="card-img-top"
+                                        alt="..."
+                                    />
+                                    <figcaption class="card-body">
+                                        <h4 class="card-title">Card title</h4>
+                                        <p class="card-text">
+                                            This is a wider card with supporting
+                                            text below as a natural lead-in to
+                                            additional content. This card has
+                                            even longer content than the first
+                                            to show that equal height action.
+                                        </p>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                        </section>
+                    </div>
+                </article>
+            </section>
         </main>
 
         <!-- Beginning of Footer -->
