--- a/brewing.html
+++ b/brewing.html
@@ -110,7 +110,7 @@
         <!-- Main section -->
 
         <main class="portfolio container-fluid">
-            <section class="row">
+            <div class="row">
                 <article
                     class="main-container portfolio-container col-md-7 offset-1"
                 >
@@ -227,7 +227,7 @@
                         </section>
                     </div>
                 </article>
-            </section>
+            </div>
         </main>
 
         <!-- Beginning of Footer -->
