--- a/portfolio.html
+++ b/portfolio.html
@@ -113,7 +113,7 @@
         <!-- Portfolio -->
 
         <main class="portfolio container-fluid">
-            <section class="row">
+            <div class="row">
                 <article
                     class="main-container portfolio-container col-md-7 offset-1"
                 >
@@ -231,7 +231,7 @@
                         </section>
                     </div>
                 </article>
-            </section>
+            </div>
         </main>
 
         <!-- Beginning of Footer -->
