--- a/portfolio.html
+++ b/portfolio.html
@@ -128,7 +128,7 @@
                                 <figure class="card">
                                     <img
                                         src="https://via.placeholder.com/300"
-                                        class="card-img-top"
+                                        class="img-fluid"
                                         alt="..."
                                     />
                                     <figcaption class="card-body">
@@ -144,7 +144,7 @@
                                 <figure class="card">
                                     <img
                                         src="https://via.placeholder.com/300"
-                                        class="card-img-top"
+                                        class="img-fluid"
                                         alt="..."
                                     />
                                     <figcaption class="card-body">
@@ -159,7 +159,7 @@
                                 <figure class="card">
                                     <img
                                         src="https://via.placeholder.com/300"
-                                        class="card-img-top"
+                                        class="img-fluid"
                                         alt="..."
                                     />
                                     <figcaption class="card-body">
@@ -182,7 +182,7 @@
                                 <figure class="card">
                                     <img
                                         src="https://via.placeholder.com/300"
-                                        class="card-img-top"
+                                        class="img-fluid"
                                         alt="..."
                                     />
                                     <figcaption class="card-body">
@@ -198,7 +198,7 @@
                                 <figure class="card">
                                     <img
                                         src="https://via.placeholder.com/300"
-                                        class="card-img-top"
+                                        class="img-fluid"
                                         alt="..."
                                     />
                                     <figcaption class="card-body">
@@ -213,7 +213,7 @@
                                 <figure class="card">
                                     <img
                                         src="https://via.placeholder.com/300"
-                                        class="card-img-top"
+                                        class="card-img-top img-fluid"
                                         alt="..."
                                     />
                                     <figcaption class="card-body">
