--- a/portfolio.html
+++ b/portfolio.html
@@ -213,7 +213,7 @@
                                 <figure class="card">
                                     <img
                                         src="https://via.placeholder.com/300"
-                                        class="card-img-top img-fluid"
+                                        class="img-fluid"
                                         alt="..."
                                     />
                                     <figcaption class="card-body">
